--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
       </section>
       </div>
       <footer class="site-footer">
-        <p>Player goes here..</p>
+          <div id="player">
+              <button type="button" data-icon="play"></button>
+          </div>
       </footer>
       
   </body>
